# note-boi

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  todo.txt  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: release.mts  release.ts  updater.js  updater.mjs  updater.ts  version.mjs
src/: App.vue  appError.ts  constant.ts  env.d.ts  log.ts  main.ts  storage.ts  store.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  config.rs  lib.rs  main.rs  menu.rs  note.rs  window.rs
src-tauri/src/commands/: access_token.rs  backup_notes.rs  delete_note.rs  edit_note.rs  export_notes.rs  get_all_notes.rs  import_notes.rs  mod.rs  new_note.rs  sync_local_notes.rs
src-tauri/src/utils/: time.rs
src/__tests__/: .eslintrc  api.ts  main.test.ts  notes.json  setup.ts  shim.d.ts  snapshot.ts  tauri.ts  utils.test.ts  utils.ts
src/__tests__/components/: App.test.ts  ContextMenu.test.ts  DropMenu.test.ts  Editor.test.ts  Loading.test.ts  Logout.test.ts  NoteMenu.test.ts  Popup.test.ts  PopupChangePassword.test.ts  PopupInfo.test.ts  PopupSyncAuth.test.ts  PopupSyncError.test.ts  Settings.test.ts  SyncAuth.test.ts  SyncError.test.ts  SyncStatus.test.ts  UtilityMenu.test.ts
src/__tests__/mock/: api.ts  index.ts  request.ts
src/__tests__/mock/tauri/: api.ts  emit.ts  index.ts  invoke.ts  listen.ts
src/__tests__/src/: appError.test.ts  log.test.ts  main.test.ts  storage.test.ts  utils.test.ts
src/__tests__/src/__snapshots__/: appError.test.ts.snap  log.test.ts.snap  main.test.ts.snap  storage.test.ts.snap  utils.test.ts.snap
src/__tests__/src/api/: account.test.ts  auth.test.ts  notes.test.ts
src/__tests__/src/classes/: appError.test.ts  debounceQueue.test.ts  encryptor.test.ts  fetchBuilder.test.ts  keyStore.test.ts  log.test.ts  note.test.ts  storage.test.ts  unsyncedNotesManager.test.ts
src/__tests__/src/components/: App.test.ts  ContextMenu.test.ts  DropMenu.test.ts  Editor.test.ts  Loading.test.ts  Logout.test.ts  NoteMenu.test.ts  Popup.test.ts  PopupChangePassword.test.ts  PopupInfo.test.ts  PopupSyncAuth.test.ts  (+4 more)
src/__tests__/store/: note.test.ts  popup.test.ts  sync.test.ts  theme.test.ts
src/__tests__/utils/: assert.ts  async.ts  dom.ts  dummyNotes.ts  encrypt.ts  index.ts  normalise.ts  noteCollection.ts  number.ts  object.ts  reset.ts
src/api/: account.ts  auth.ts  index.ts  notes.ts
src/api/utils/: error.ts  http.ts  index.ts  route.ts
src/classes/: appError.ts  debounceQueue.ts  encryptor.ts  fetchBuilder.ts  index.ts  keyStore.ts  note.ts  storage.ts  unsyncedNotesManager.ts
src/components/: ContextMenu.vue  DropMenu.vue  DropMenuItem.vue  DropMenuItems.vue  Editor.vue  HelloWorld.vue  Loading.vue  Logout.vue  Menu.vue  NoteMenu.vue  Popup.vue  PopupChangePassword.vue  PopupInfo.vue  PopupSyncAuth.vue  PopupSyncError.vue  Settings.vue  SyncAuth.vue  SyncButton.vue  SyncError.vue  SyncStatus.vue  UtilityMenu.vue  types.ts
src/components/svg/: BinIcon.vue  CloudErrorIcon.vue  CloudSyncIcon.vue  CloudTickIcon.vue  CogIcon.vue  LogoutIcon.vue  PlusIcon.vue
src/sass/: _button.scss  _form.scss  _reset.scss  _theme.scss  _vars.scss  style.scss
src/store/: note.ts  popup.ts  sync.ts  theme.ts  update.ts
src/store/note/: event.ts  index.ts  state.ts  types.ts  utils.ts
src/store/sync/: account.ts  auth.ts  encryptor.ts  index.ts  keyStore.ts  note.ts  noteSync.ts  notes.ts  state.ts
(+79 files in other folders)
