[package]
name = "note-boi"
version = "0.1.0"
description = "A Notes App"
authors = ["Daniel Knights"]
license = "MIT"
repository = "https://github.com/Daniel-Knights/note-boi"
default-run = "note-boi"
edition = "2021"
build = "build.rs"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc", features = ["dialog-ask", "http-request", "process-exit", "process-relaunch", "shell-open", "updater", "window-close"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Strip debug symbols
